@@ -92,6 +92,8 @@ Release 2.14.1 Start 21/09/2021
     removeheaders, envheaders, logheaders, mailarchive control files.
 - 26/02/2022
 50. qmail-smtpd.c: fix ehlo greating for local connections
+01/03/2022
+51. qmail-todo.c: renamed compat_mode variable to compat_mode_flag
 
 * 
 Release 2.14.0 Start 18/07/2021
